5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1595_1016.log
== TEST (2019-03-21 17:14:16) 
-- CODE:
x=float(input("comprimento dos lados: "))
l1=a
l2=b
l3=c
s=int((l1+l2+l3)/2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    l1=a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:15:34) 
-- CODE:
x=float(input("comprimento dos lados: "))
l1=a
l2=b
l3=c
s=int((l1+l2+l3)/2)
A=sqrt(s*(s-l1)*(s-l2)*(s-l3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    l1=a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:16:43) 
-- CODE:
x=sqrt(4)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=sqrt(4)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:17:18) 
-- CODE:
x=sqrt(sqrt(4))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=sqrt(sqrt(4))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:45:48) 
-- CODE:
x=sqrt(sqrt(4))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=sqrt(sqrt(4))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
